# TaskForge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  docker.yml  runner.yml
apps/api/: Dockerfile  package.json
apps/api/src/: app.controller.spec.ts  app.module.ts  main.ts
apps/api/src/artifacts/: artifacts.controller.ts  artifacts.module.ts  artifacts.service.ts
apps/api/src/audit/: audit.service.ts
apps/api/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts  jwt.strategy.ts  req-user.decorator.ts
apps/api/src/common/: prompt.util.ts  zod.pipe.ts
apps/api/src/outbox/: outbox.module.ts  outbox.service.ts
apps/api/src/projects/: projects.controller.ts  projects.module.ts  projects.service.ts
apps/api/src/repositories/: gitlab.provider.ts  provider.port.ts  repositories.controller.ts  repositories.module.ts  repositories.service.ts
apps/api/src/runner/: runner.controller.ts  runner.module.ts  runner.service.ts
apps/web/: Dockerfile  next.config.js  package.json
apps/web/src/app/: layout.tsx  (+1 more)
apps/worker/: Dockerfile  package.json
apps/worker/src/: main.ts  queue-names.ts  redis.ts
crates/runner/: Cargo.toml  README.md
crates/runner-core/: Cargo.toml  README.md
crates/runner-core/src/: acp_host.rs  agent_host.rs  auth.rs  binding.rs  config.rs  error.rs  lib.rs  platform.rs  redaction.rs  spool.rs
crates/runner/src/: main.rs
docs/: taskforge-architecture.drawio
(+38 files in other folders)
