[workspace]
members = ["crates/runner", "crates/runner-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["TaskForge Contributors"]

[workspace.dependencies]
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
thiserror = "2.0.0"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "6.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sha2 = "0.10.8"
hex = "0.4.3"
chrono = { version = "0.4.39", features = ["serde"] }
tempfile = "3.14.0"
toml = "0.8.19"
